--- a/.env
+++ b/.env
@@ -3,3 +3,6 @@ MONGO_URI = "mongodb+srv://campussutras:Campussutras7505@cluster0.0dkavms.mongod
 TOKEN_SECRET = campussutrasisthetrainingcompanyforindividuals
 
 DOMAIN = "localhost:3000"
+
+MAIL_USER = "campussutras@outlook.com"
+MAIL_USER_PASSWORD = "Kundan@7505"
