--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "bcryptjs": "^2.4.3",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.3.1",
-    "next": "13.4.4",
+    "next": "^13.4.8",
     "nodemailer": "^6.9.3",
     "nodemailer-express-handlebars": "^6.1.0",
     "react": "18.2.0",
