--- a/package.json
+++ b/package.json
@@ -16,14 +16,12 @@
     "bcryptjs": "^2.4.3",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.3.1",
-    "next": "^13.4.8",
+    "next": "^13.4.10",
     "nodemailer": "^6.9.3",
-    "nodemailer-express-handlebars": "^6.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-hot-toast": "^2.4.1",
     "react-icons": "^4.8.0",
-    "swiper": "^9.3.2",
+    "react-toastify": "^9.1.3",
     "typescript": "5.0.4"
   },
   "devDependencies": {
